--- a/tester.ipynb
+++ b/tester.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c89aad7bbe04ebf89cb23271fb32e02",
+       "model_id": "82efcc72a1264493b5f729ab29d22473",
        "version_major": 2,
        "version_minor": 0
       },
       "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>HelloWorld</code>.</p>\n",
+       "<p>Failed to display Jupyter Widget of type <code>trenaViz</code>.</p>\n",
        "<p>\n",
        "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
        "  that the widgets JavaScript is still loading. If this message persists, it\n",
@@ -28,7 +28,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "HelloWorld()"
+       "trenaViz()"
       ]
      },
      "metadata": {},
@@ -36,7 +36,55 @@
     }
    ],
    "source": [
-    "import trenavizjlab; trenavizjlab.HelloWorld()"
+    "import trenavizjlab; trenavizjlab.trenaViz()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = trenavizjlab.trenaViz()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d7763c7492a4ce7b15df4bc50beff36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>trenaViz</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "trenaViz()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
